<resources>
    <string name="app_name">DVD Shop</string>
    <string name="btn_sair">SAIR</string>
    <string name="btn_comprar">Comprar Agora</string>
    <string name="btn_carrinho">Adicionar Ao Carrinho</string>
    <string name="btn_interesse">Interesse</string>

    <string name="nomeproduto1">DVD - Ever After High</string>
    <string name="estoqueproduto1">Estoque : 3</string>
    <string name="quantidadeproduto1">Quantidade : </string>

    <string name="nomeproduto2">DVD - Barbie Eo Castelo de Diamantes</string>
    <string name="estoqueproduto2">Estoque : 1</string>

    <string name="nomeproduto3">DVD - Frozen </string>
    <string name="estoqueproduto3">Estoque : 7</string>

    <string name="nomeproduto4">DVD - Monster High  Assombrada </string>
    <string name="estoqueproduto4">Estoque : 5</string>

</resources>